--- a/laravel_blog/laravel/composer.json
+++ b/laravel_blog/laravel/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-debugbar": "^3.10",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/breeze": "^1.29",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8"
